samples/_failures_safe/1761640071_b7ab91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bc4ce06.c: In function ‘main’:
./samples/SAFE/__tmp_6bc4ce06.c:161:17: error: expected expression at end of input
  161 |                 if (scanf("%d", &start) !=
      |                 ^~
./samples/SAFE/__tmp_6bc4ce06.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bc4ce06.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bc4ce06.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6bc4ce06.c:161:17: error: expected declaration or statement at end of input
